<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:clickable="false"
    android:color="#fbff59"
    android:id="@+id/main_menu_layout"
    android:focusable="true">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Player1Button"
        android:id="@+id/player1Button"
        android:clickable="true"
        android:textSize="30sp"
        android:layout_marginTop="105dp"
        android:layout_below="@+id/player3Button"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Player2Button"
        android:id="@+id/player2Button"
        android:layout_marginBottom="75dp"
        android:clickable="true"
        android:elegantTextHeight="false"
        android:textSize="30sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Player3Button"
        android:id="@+id/player3Button"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Player4Button"
        android:id="@+id/player4Button"
        android:layout_below="@+id/player1Button"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="77dp"
        android:textSize="30sp" />
</RelativeLayout>
