<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/numPlayersText"
        android:id="@+id/numPlayersTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:textSize="50sp"
        android:textAlignment="center"
        android:typeface="normal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TwoPlayerModeButton"
        android:id="@+id/TwoPlayersButton"
        android:layout_below="@+id/numPlayersTextView"
        android:layout_marginTop="49dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:clickable="true"
        android:textSize="40sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ThreePlayerModeButton"
        android:id="@+id/ThreePlayersButton"
        android:layout_above="@+id/FourPlayersButton"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="79dp"
        android:layout_alignParentEnd="true"
        android:textSize="40sp"
        android:clickable="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FourPlayerModeButton"
        android:id="@+id/FourPlayersButton"
        android:layout_marginBottom="43dp"
        android:textSize="40sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:clickable="true" />
</RelativeLayout>
