<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/twoPlayerButton"
        android:id="@+id/twoPlayers"
        android:clickable="true"
        android:textSize="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/threePlayers"
        android:layout_marginTop="67dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/threePlayerButton"
        android:id="@+id/threePlayers"
        android:clickable="true"
        android:textSize="40dp"
        android:layout_below="@+id/twoPlayers"
        android:layout_alignStart="@+id/fourPlayers"
        android:layout_marginTop="73dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fourPlayerButton"
        android:id="@+id/fourPlayers"
        android:clickable="true"
        android:textSize="40dp"
        android:layout_below="@+id/threePlayers"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="97dp" />
</RelativeLayout>
