<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:clickable="false"
    android:color="#fbff59"
    android:id="@+id/main_menu_layout"
    android:focusable="true"
    android:background="#8c98a397">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Player1Button"
        android:id="@+id/player1Button"
        android:clickable="true"
        android:textSize="30sp"
        android:height="100dp"
        android:minWidth="200dp"
        android:layout_below="@+id/player3Button"
        android:layout_alignParentStart="true"
        android:layout_marginTop="43dp"
        android:background="#ecec31" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Player2Button"
        android:id="@+id/player2Button"
        android:clickable="true"
        android:elegantTextHeight="false"
        android:textSize="30sp"
        android:height="100dp"
        android:minWidth="200dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="59dp"
        android:background="#ffaf3a" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Player3Button"
        android:id="@+id/player3Button"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/player2Button"
        android:minWidth="200dp"
        android:minHeight="100dp"
        android:background="#c748ff" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Player4Button"
        android:id="@+id/player4Button"
        android:textSize="30sp"
        android:minWidth="200dp"
        android:minHeight="100dp"
        android:layout_below="@+id/player1Button"
        android:layout_alignEnd="@+id/player3Button"
        android:background="#cd1121" />
</RelativeLayout>
