<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/gameShowBuzzerID">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mainMenuTextView"
        android:id="@+id/mainMenuTextView"
        android:textIsSelectable="false"
        android:linksClickable="false"
        android:textStyle="bold"
        android:textColorHint="#c1ff82"
        android:textColorLink="#73ff7e"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="50sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reactionTimerButton"
        android:id="@+id/reactionTimerButton"
        android:textSize="30sp"
        android:layout_marginTop="43dp"
        android:layout_below="@+id/mainMenuTextView"
        android:layout_centerHorizontal="true"
        android:clickable="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gameShowBuzzerButton"
        android:id="@+id/gameShowBuzzerButton"
        android:textSize="30sp"
        android:clickable="true"
        android:layout_below="@+id/reactionTimerButton"
        android:layout_alignParentStart="true"
        android:layout_marginTop="73dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/StatButtonText"
        android:id="@+id/statButton"
        android:textSize="30sp"
        android:clickable="true"
        android:textAlignment="center"
        android:layout_below="@+id/gameShowBuzzerButton"
        android:layout_alignEnd="@+id/reactionTimerButton"
        android:layout_marginTop="51dp" />

</RelativeLayout>
