<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#fa111100">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/threeP_player1ButtonText"
        android:id="@+id/player1Button"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:height="150dp"
        android:clickable="true"
        android:textSize="50sp"
        android:background="#ff571b" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/threeP_player2ButtonText"
        android:id="@+id/player2Button"
        android:height="150dp"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:clickable="true"
        android:textSize="50sp"
        android:background="#574cff" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/threeP_player3ButtonText"
        android:id="@+id/player3Button"
        android:height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:clickable="true"
        android:textSize="50sp"
        android:background="#2cb62f" />
</RelativeLayout>
